--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 body {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 13px;
+    overflow-x: hidden;
 }
 
 header {
@@ -57,6 +58,18 @@ header {
     color: #CCC;
 }
 
+.button {
+    display: inline-block;
+    background-color: #B28756;
+    color: #FFF;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 10px 30px;
+    margin-top: 30px;
+    border-radius: 20px;
+}
 
 .banner {
     height: calc(100vh - 100px);
@@ -89,24 +102,12 @@ header {
     font-weight: bold;
     font-size: 50px;
 }
-.banner h1 span {
+.banner .coloredText {
     color: #B28756;
 }
 .banner h2 {
     text-transform: uppercase;
     margin-top: 20px;
-}
-.banner a {
-    display: block;
-    background-color: #B28756;
-    color: #FFF;
-    text-transform: uppercase;
-    font-size: 11px;
-    font-weight: 600;
-    text-decoration: none;
-    padding: 10px 30px;
-    margin-top: 30px;
-    border-radius: 20px;
 }
 .banner .sliders_pointers {
     width: 100vw;
@@ -118,14 +119,102 @@ header {
     align-items: center;
 }
 .banner .pointer {
-    width: 15px;
-    height: 15px;
+    width: 13px;
+    height: 13px;
     border: 2px solid #B28756;
-    border-radius: 8px;
+    border-radius: 7px;
     margin-left: 5px;
     margin-right: 5px;
     cursor: pointer;
 }
 .banner .pointer.active {
     background-color: #B28756;
+}
+
+
+
+.default {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.default .section_title,
+.default .section_description {
+    text-transform: uppercase;
+    font-weight: 600;
+}
+.default .section_title {
+    font-weight: 700;
+    font-size: 20px;
+}
+.default .section_description {
+    font-size: 10px;
+    color: #CCC;
+    margin-top: 13px;
+    margin-bottom: 45px;
+}
+.default .section_body {
+    max-width: 1140px;
+    margin: auto;
+}
+.default.light {
+    background-color: #F7F7F7;
+}
+.default.light .section_title,
+.default.light .section_body {
+    color: #000;
+}
+.default.dark {
+    background-color: #000;
+}
+.default.dark .section_title,
+.default.dark .section_body {
+    color: #FFF;
+}
+
+
+
+
+
+
+
+
+/*
+CSS DE ÁREAS ESPECÍFICAS
+*/
+
+.section_aboutus {
+    display: flex;
+}
+.section_aboutus_left {
+    flex: 1;
+}
+.section_aboutus_left p {
+    font-size: 14px;
+    line-height: 25px;
+    text-align: justify;
+}
+.section_aboutus_right {
+    margin-left: 30px;
+    width: 445px;
+    height: 250px;
+    background-image: url('../../media/awax_aboutus.jpg');
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    box-shadow: 0px 5px 10px #333;
+}
+.section_aboutus_right_video {
+    width: 100%;
+    height: 100%;
+    font-size: 25px;
+    font-weight: 600;
+    color: #FFF;
+    text-transform: uppercase;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
