--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,8 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-top: 1px solid #CCC;
+    border-bottom: 1px solid #CCC;
 }
 .default .section_title,
 .default .section_description {
@@ -486,10 +488,7 @@ CSS DE ÁREAS ESPECÍFICAS
 }
 
 
-.prizes {
-    border-top: 1px solid #CCC;
-    border-bottom: 2px solid #CCC;
-}
+
 .prizes_area {
     margin: auto;
     max-width: 1140px;
@@ -556,4 +555,232 @@ CSS DE ÁREAS ESPECÍFICAS
 }
 .section_price a:hover {
     background-color: #B28756;
+}
+
+
+
+.section_premium_area {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.section_premium {
+    margin-bottom: 50px;
+}
+.section_premium .sliders {
+    width: 1000vw;
+    height: 100%;
+}
+.section_premium .slide_premium {
+    width: 1140px;
+    height: 100%;
+    display: inline-flex;
+    align-items: center;
+    border-bottom: 1px solid #CCC;
+}
+.slide_premium_image {
+    margin-left: 100px;
+    margin-right: 80px;
+    margin-bottom: 50px;
+}
+.slide_premium_right {
+    margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+}
+.slide_premium_right img {
+    width: 28px;
+    height: 28px;
+    margin-right: 20px;
+}
+.slide_premium_feature {
+    display: flex;
+}
+.slide_premium_content {
+    line-height: 25px;
+    margin-bottom: 20px;
+}
+.slide_premium_content h1 {
+    font-size: 20px;
+    text-transform: uppercase;
+}
+.slide_premium_content p {
+    color: #aeaeae;
+}
+.section_premium_area .sliders_pointers {
+    width: 1140px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.section_premium_area .pointer {
+    width: 13px;
+    height: 13px;
+    border: 2px solid #B28756;
+    border-radius: 7px;
+    margin-left: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+.section_premium_area .pointer.active {
+    background-color: #B28756;
+}
+
+
+
+.section_facts {
+    display: flex;
+}
+.section_fact {
+    display: flex;
+    flex-direction: column;
+    max-width: 195px;
+    height: 180px;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 80px;
+}
+.section_fact:last-child {
+    margin-right: 0;
+}
+.section_fact_area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.section_fact_number {
+    font-size: 50px;
+    font-weight: 900;
+    color: #B28756;
+}
+.section_fact_line {
+    width: 15px;
+    height: 3px;
+    background-color: #999;
+    margin-bottom: 5px;
+}
+.section_fact_work {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.section_fact_info {
+    text-align: justify;
+    line-height: 20px;
+    margin-top: 20px;
+    color: #999;
+}
+
+
+
+.social {
+    background-color: #fefefe;
+}
+.social a {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 35px;
+    height: 35px;
+    border-radius: 18px;
+    margin-right: 5px;
+}
+.social p {
+    font-size: 10px;
+    font-weight: 700;
+    color: #afafaf;
+}
+.social_area {
+    margin: auto;
+    max-width: 1140px;
+    height: 75px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.social_info {
+    display: flex;
+    padding: 20px;
+    align-items: center;
+}
+.social_share {
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    margin-right: 50px;
+}
+.social_share p {
+    font-size: 14px;
+}
+.social_twitter {
+    background-color: #34c5f1;
+}
+.social_linkedin {
+    background-color: #117cb0;
+}
+.social_facebook {
+    background-color: #346397;
+}
+.social_googleplus {
+    background-color: #e84236;
+}
+.social_pinterest {
+    background-color: #b81e2a;
+}
+
+
+
+.section_message_area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.section_message {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 540px;  
+}
+.section_message input {
+    width: 100%;
+    font-size: 15px;
+    margin-bottom: 30px;
+    border: 0;
+    background-color: #F7F7F7;
+    border-bottom: 2px solid #999;
+    padding: 15px 0;
+    outline: none;
+}
+.section_message input::placeholder {
+    font-size: 12px;
+    color: #999;
+    text-transform: uppercase;
+}
+.message {
+    width: 100%;
+    font-size: 17px;
+    border: 0;
+    background-color: #F7F7F7;
+    border-bottom: 2px solid #999;
+    padding: 5px 0;
+    outline: none;
+    resize: none;
+    margin-top: 30px;
+}
+.message::placeholder {
+    font-size: 14px;
+    color: #999;
+    text-transform: uppercase;
+}
+.sender {
+    display: flex;
+    margin: auto;
+}
+.sender input {
+    flex: 1;
+    width: 255px;
+    margin-right: 30px;
 }
