--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -784,3 +784,117 @@ CSS DE ÁREAS ESPECÍFICAS
     width: 255px;
     margin-right: 30px;
 }
+
+
+
+.section_map {
+    background-image: url('../images/mapa.jpg');
+    background-size: cover;
+    background-position: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+
+}
+.section_map_area {
+    width: 100vw;
+    max-width: 1140px;
+    margin: auto;
+}
+.section_map_info {
+    width: 50%;
+    padding: 30px;
+    background-color: #FFF;
+    color: #000;
+}
+.secction_map_item {
+    display: flex;
+    align-items: center;
+    color: #999;
+    margin-bottom: 10px;
+}
+.secction_map_item_img {
+    width: 30px;
+    height: 30px;
+    display: inline-flex;
+    padding: 5px;
+    background-color: #999;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    margin-right: 15px;
+}
+.secction_map_item_img img{
+    width: 20px;
+    height: auto;
+}
+
+
+
+
+
+
+
+.footer_area {
+    max-width: 1140px;
+    margin: auto;
+    display: flex;
+    color: #FFF;
+}
+.footer_social {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-weight: 600;
+}
+.footer_social_area {
+    display: flex;
+    margin-top: 20px;
+}
+.footer_social_area a {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 25px;
+    height: 25px;
+    background-color: #222;
+    border-radius: 13px;
+    margin-right: 10px
+}
+.footer_social_area a:hover {
+    background-color: #B28756;
+}
+.footer_info {
+    flex: 1;
+    text-align: start;
+    margin-left: 30px;
+    margin-right: 60px;
+    line-height: 25px;
+    color: #999;
+}
+.footer_subscribe {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #222;
+    padding: 30px;
+}
+.footer_subscribe input {
+    width: 100%;
+    font-size: 15px;
+    margin-bottom: 30px;
+    border: 0;
+    background-color: #222;
+    border-bottom: 2px solid #999;
+    padding: 15px 0;
+    outline: none;
+    text-align: center;
+    color: #999;
+}
+.footer_subscribe input::placeholder {
+    font-size: 12px;
+    color: #999;
+    text-transform: uppercase;
+}
